SIS2-40: theming and styling for cards. Added date for news. Filters facet too + Mobile view.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -165,6 +165,13 @@
     }
   }
 
+  &__date {
+    font-size: var(--base-font-size-extra-small);
+    font-family: var(--base-font-family);
+    color: var(--color-purple);
+    margin-bottom: 4px;
+  }
+
   &__description {
     display: -webkit-box; /* stylelint-disable-line */
     margin-bottom: 8px;
