--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--list.html.twig
@@ -86,6 +86,12 @@
 					<div class="inspiration-overview__title">
 						{{ label }}
 					</div>
+					<div class="inspiration-overview__date">
+						{% set createdDate = node.getCreatedTime|date('j F Y') %}
+						{% trans %}
+							{{ createdDate }}
+						{% endtrans %}
+					</div>
 					<div class="inspiration-overview__description">
 						{{ content.field_description }}
 					</div>
