--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/term-overview-small.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/term-overview-small.html.twig
@@ -1,6 +1,6 @@
 {{ attach_library('sis/inspiration-overview') }}
 <section class="section section--spacing-top-medium section--spacing-bottom-none js-term-overview">
-  <div class="container">
+  <div>
     <div class="row">
       <div class="col-sm-12">
         <div{{ attributes.addClass('inspiration-overview__term') }}>
