--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_map/templates/map.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_map/templates/map.html.twig
@@ -41,16 +41,17 @@
       <h1>{{ map_title }}</h1>
       {{ description_above_map }}
     </div>
+<a class="map-button col-md-offset-1" href="{{ button_link }}">
+	<button {{ create_attribute().addClass(button_classes) }}>
+		{{ button_text }}
+	</button>
+</a>
+
     <div class="col-md-8 col-lg-7 col-xs-12">
-      <a class="map-button" href="{{ button_link }}">
-        <button {{ create_attribute().addClass(button_classes) }}>
-            {{ button_text }}
-        </button>
-      </a>
       <div class="map-container"></div>
       <div class="result-list"></div>
     </div>
-    <div class="col-md-3 col-lg-3 col-xs-12 filters">
+    <div class="col-md-3 col-lg-3 col-xs-12 col-md-offset-1 filters">
       <div class="same-line-text-and-icon">
         <div class="text">
           <h5>Stedsbaserede materialer</h5>
