SIS2-411: Created logic and button for the undervins box, need modal and js now

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -186,3 +186,36 @@
 .contextual-region {
   overflow: visible;
 }
+
+.undervi-box {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  height: 300px;
+
+  &--read-more {
+    font-weight: 700;
+    display: block;
+
+    a {
+    color: var(--color-purple);
+      cursor: pointer;
+      text-decoration: none;
+      display: flex;
+    }
+
+    ::after {
+      display: block;
+      width: 8px;
+      height: 8px;
+      border-top: 2px solid var(--color-purple);
+      border-right: 2px solid var(--color-purple);
+      transform: rotate(45deg);
+      content: '';
+      margin-left: 6px;
+      margin-top: 9px;
+    }
+  }
+}
