--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -193,17 +193,18 @@
   -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
   display: -webkit-box;
-  height: 300px;
+  max-height: 300px;
 
   &--read-more {
     font-weight: 700;
+    padding-bottom: 15px;
     display: block;
 
     a {
-    color: var(--color-purple);
+      color: var(--color-purple);
       cursor: pointer;
-      text-decoration: none;
       display: flex;
+     text-underline-offset: 3px;
     }
 
     ::after {
