SIS2-277: Updated slider pager counter to be calculated by javascript instead of css and html markup

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/related-articles.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/related-articles.css
@@ -22,6 +22,11 @@
     }
   }
 
+  .slider-pager-count {
+    display: flex;
+    width: auto;
+  }
+
   .swiper-navigation {
     display: flex;
     align-items: center;
