--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -70,6 +70,7 @@
 
 {{ attach_library('sis/article-page') }}
 {{ attach_library('sis/facts-box') }}
+{{ attach_library('sis/slider-pager-count') }}
 {{ attach_library('sis/related-articles') }}
 {% if node.field_section_bg_graphics.value %}
   {{ attach_library('sis/section-bg-graphics') }}
@@ -310,6 +311,11 @@
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="swiper-navigation">
+              {% if related_count > 0 %}
+                <div class="slider-pager-count">
+                  {{ 'Showing'|t }}&nbsp;<span class="slider-pager-count--showing"></span>&nbsp;{{ 'out of'|t }}&nbsp;<span class="slider-pager-count--total"></span>
+                </div>
+              {% endif %}
               <div class="swiper-button-prev"></div>
               <div class="swiper-button-next"></div>
             </div>
