--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--full.html.twig
@@ -172,22 +172,8 @@
             </div>
           </div>
           {% if other_blog_posts_count > 0 %}
-            <div class="slider-pager-count{{ other_blog_posts_count > 1 ? ' md-hidden lg-hidden xl-hidden' }}{{ other_blog_posts_count > 2 ? ' ms-hidden sm-hidden lg-hidden xl-hidden' }}{{ other_blog_posts_count > 3 ? ' ms-hidden sm-hidden md-hidden' }}">
-              {{ 'Showing'|t }}
-              <span class="slider-pager-count--showing">
-                <span class="ms-hidden sm-hidden md-hidden lg-hidden xl-hidden">1</span>
-                {% if other_blog_posts_count > 1 %}
-                  <span class="xs-hidden md-hidden lg-hidden xl-hidden">2</span>
-                {% endif %}
-                {% if other_blog_posts_count > 2 %}
-                  <span class="xs-hidden ms-hidden sm-hidden lg-hidden xl-hidden">3</span>
-                {% endif %}
-                {% if other_blog_posts_count > 3 %}
-                  <span class="xs-hidden ms-hidden sm-hidden md-hidden">4</span>
-                {% endif %}
-              </span>
-              {{ 'out of'|t }}
-              <span class="slider-pager-count--total">{{ other_blog_posts_count }}</span>
+            <div class="slider-pager-count">
+              {{ 'Showing'|t }}&nbsp;<span class="slider-pager-count--showing"></span>&nbsp;{{ 'out of'|t }}&nbsp;<span class="slider-pager-count--total"></span>
             </div>
           {% endif %}
         </div>
