SIS2-380: A bunch of frontend changes. Added button to overview etc..

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -319,3 +319,29 @@
     max-width: 300px;
   }
 }
+
+.overview-form {
+  .button {
+    display: none;
+  }
+}
+
+.overview-form {
+  .container {
+    .custom-accordion-wrapper {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 20px;
+    }
+
+    .custom-accordion-wrapper-button {
+        margin-top: 40px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        width: 300px;
+
+      }
+  }
+}
