--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -71,6 +71,7 @@
 {{ attach_library('sis/article-page') }}
 {{ attach_library('sis/facts-box') }}
 {{ attach_library('sis/slider-pager-count') }}
+{{ attach_library('sis/modal-article') }}
 {{ attach_library('sis/related-articles') }}
 {% if node.field_section_bg_graphics.value %}
   {{ attach_library('sis/section-bg-graphics') }}
