--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/user/user--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/user/user--full.html.twig
@@ -20,6 +20,7 @@
 {{ attach_library('sis/news-page') }}
 {{ attach_library('sis/user-page') }}
 {{ attach_library('sis/lexicon') }}
+{{ attach_library('sis/slider-pager-count') }}
 
 {% set classes = [
   'user-page',
@@ -48,11 +49,9 @@
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4">
 						<div class="swiper-navigation">
-							<div class="swiper-pagination-wrapper">
-								<div class="swiper-pagination-title">
-									Viser:</div>
-								<div class="swiper-pagination"></div>
-							</div>
+              <div class="slider-pager-count">
+                {{ 'Showing'|t }}&nbsp;<span class="slider-pager-count--showing"></span>&nbsp;{{ 'out of'|t }}&nbsp;<span class="slider-pager-count--total"></span>
+              </div>
 							<div class="swiper-button-prev"></div>
 							<div class="swiper-button-next"></div>
 						</div>
@@ -77,11 +76,9 @@
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4">
 						<div class="swiper-navigation">
-							<div class="swiper-pagination-wrapper">
-								<div class="swiper-pagination-title">
-									Viser:</div>
-								<div class="swiper-pagination"></div>
-							</div>
+              <div class="slider-pager-count">
+                {{ 'Showing'|t }}&nbsp;<span class="slider-pager-count--showing"></span>&nbsp;{{ 'out of'|t }}&nbsp;<span class="slider-pager-count--total"></span>
+              </div>
 							<div class="swiper-button-prev"></div>
 							<div class="swiper-button-next"></div>
 						</div>
