--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
@@ -40,6 +40,8 @@
   --theme-color: var(--color-black);
   --theme-button-background-color: var(--color-pink);
   --theme-button-color: var(--color-purple);
+  --theme-arrow-background-color: var(--color-green);
+  --theme-arrow-color: var(--color-white);
   --theme-link-color: var(--color-black);
   --theme-divider-background-color: var(--color-black);
   --theme-accordion-color: var(--color-purple);
