--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/latest-news.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/latest-news.css
@@ -44,7 +44,7 @@
       width: 44px;
       height: 44px;
       margin-top: 0;
-      background-color: var(--color-green-dark);
+      background-color: var(--theme-arrow-background-color);
       border-radius: 50%;
       transform: translate(0);
     }
@@ -62,19 +62,19 @@
       width: 12px;
       height: 12px;
       transform: translate(-50%, -50%) rotate(45deg);
-      content: '';
+      content: "";
     }
 
     .swiper-button-prev::after {
       margin-left: 2px;
-      border-bottom: 2px solid #fff;
-      border-left: 2px solid #fff;
+      border-bottom: 2px solid var(--theme-arrow-color);
+      border-left: 2px solid var(--theme-arrow-color);
     }
 
     .swiper-button-next::after {
       margin-left: -2px;
-      border-top: 2px solid #fff;
-      border-right: 2px solid #fff;
+      border-top: 2px solid var(--theme-arrow-color);
+      border-right: 2px solid var(--theme-arrow-color);
     }
   }
 
