--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
@@ -28,8 +28,8 @@
   }
 
   &--view-all-writers {
-    margin-top: 25px;
     display: none;
+    margin-top: 25px;
 
     &.expanded {
       display: block;
@@ -39,7 +39,7 @@
       display: flex;
       justify-content: flex-end;
 
-      h3 {
+      & h3 {
         flex: 75%;
       }
 
@@ -47,10 +47,12 @@
         flex: 25%;
         text-align: right;
         text-decoration: underline;
+
         &:hover {
-          cursor: pointer;
           text-decoration: none;
+          cursor: pointer;
         }
+
         svg {
           width: 20px;
           height: 20px;
@@ -66,8 +68,7 @@
     margin-top: 20px;
     margin-bottom: 10px;
     margin-left: 5%;
-    padding: 15px;
-    padding-left: 50px;
+    padding: 15px 15px 15px 50px;
 
     @media (--viewport-md-min) {
       max-width: 58%;
