--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/breadcrumb.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/breadcrumb.css
@@ -32,7 +32,7 @@
       border-top: 2px solid #3d2959;
       border-right: 2px solid #3d2959;
       transform: rotate(45deg);
-      content: '';
+      content: "";
     }
   }
 
