--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/image-slideshow.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/image-slideshow.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
 
-  & .image-slideshow-wrapper .flickity-page-dots .dot:not(:last-child) {
+  .dot:not(:last-child) {
     margin-right: 20px;
   }
 
@@ -39,7 +39,7 @@
   transition: background-color .3s;
 }
 
-.image-slideshow-wrapper .flickity-page-dots .dot.is-selected:before {
+.image-slideshow-wrapper .flickity-page-dots .dot.is-selected::before {
   position: absolute;
   top: 50%;
   left: 50%;
