--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/search-autocomplete.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/search-autocomplete.css
@@ -5,26 +5,25 @@
 .autoComplete_wrapper {
   position: relative;
   display: inline-block;
-  padding: 11px 50px 11px 20px;
   width: 100%;
+  padding: 11px 50px 11px 20px;
 
   > ul {
     position: absolute;
-    min-width: 340px;
-    box-sizing: border-box;
     right: 0;
-    padding: 0;
     z-index: 1;
+    box-sizing: border-box;
+    min-width: 340px;
+    padding: 25px 15px;
     list-style: none;
-    border-radius: 25px;
     background-color: #fff;
     border: 1px solid var(--color-blue);
-    box-shadow: 0px 15px 30px rgba(0, 0, 0, 10%);
+    border-radius: 25px;
     outline: 0;
+    box-shadow: 0 15px 30px rgb(0 0 0 / 10%);
     transition: opacity .15s ease-in-out;
-    padding: 25px 15px;
 
-    @media(--viewport-sm-max) {
+    @media (--viewport-sm-max) {
       right: 0;
       left: 0;
       min-width: 100%;
@@ -34,8 +33,8 @@
     &:empty,
     > ul[hidden] {
       display: block;
+      transform: scale(0);
       opacity: 0;
-      transform: scale(0)
     }
 
     > li {
@@ -43,17 +42,17 @@
       grid-column-gap: 10px;
       grid-template-columns: 1fr auto;
       padding: 5px 10px;
-      text-align: left;
       color: var(--color-purple);
       font-weight: var(--heading-font-weight);
       font-size: var(--base-font-size-small);
-      transition: all .2s ease;
+      text-align: left;
       border-radius: 10px;
+      transition: all .2s ease;
 
       .mark {
-        background-color: transparent;
         color: #ff7a7a;
         font-weight: 700;
+        background-color: transparent;
         border-radius: 5px;
       }
 
@@ -62,8 +61,8 @@
         cursor: pointer;
       }
 
-      &[aria-selected=true] {
-        background-color: rgba(255, 122, 122, .15)
+      &[aria-selected="true"] {
+        background-color: rgb(255 122 122 / 15%);
       }
 
       &.autoComplete_wrapper__info {
@@ -88,16 +87,16 @@
   }
 
   &__match {
-    white-space: nowrap;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
   }
 
   &__type {
     margin-left: 10px;
-    font-size: var(--base-font-size-extra-small);
-    font-weight: var(--base-font-weight);
     color: var(--color-purple);
+    font-weight: var(--base-font-weight);
+    font-size: var(--base-font-size-extra-small);
     opacity: .5;
   }
 }
