--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
@@ -112,7 +112,7 @@
 
 /* Leksicon overview block search field */
 .lexicon-search-wrapper {
-  padding: 0 18px 0 18px;
+  padding: 0 18px;
 
   @media (--viewport-ms-max) {
     padding: 0 20px;
@@ -126,9 +126,9 @@
       width: 34px;
       height: 34px;
       padding: 10px;
+      background: transparent;
       border-radius: 50%;
       cursor: pointer;
-      background: transparent;
 
       @media (--viewport-ms-max) {
         right: 33px;
