--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -53,7 +53,6 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    /*overflow: hidden;*/
   }
 
   &__item-inner {
@@ -96,12 +95,13 @@
 
     &.clickable {
       &:hover {
-        opacity: 0.5;
+        opacity: .5;
       }
     }
+
     a {
-      text-decoration: none;
       color: #fff !important;
+      text-decoration: none;
     }
 
     &--news {
@@ -144,32 +144,31 @@
 
   &__title {
     margin-bottom: 4px;
+    color: var(--color-purple);
     font-weight: 600;
     font-size: var(--base-font-size-large);
     font-family: var(--heading-font-family);
     line-height: 1.3;
-    color: var(--color-purple);
     text-decoration: none;
 
-
     &--authoring-information {
-      padding-left: 20px;
-      font-size: var(--base-font-size-small);
       margin-top: 10px;
+      padding-left: 20px;
       font-weight: normal;
+      font-size: var(--base-font-size-small);
     }
 
     &--blog-post {
-      padding-left: 20px;
       margin-bottom: 0 !important;
+      padding-left: 20px;
     }
   }
 
   &__date {
+    margin-bottom: 4px;
+    color: var(--color-purple);
     font-size: var(--base-font-size-extra-small);
     font-family: var(--base-font-family);
-    color: var(--color-purple);
-    margin-bottom: 4px;
   }
 
   &__description {
@@ -178,8 +177,8 @@
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    font-size: var(--base-font-size-small);
     color: var(--color-purple);
+    font-size: var(--base-font-size-small);
   }
 
   &__subject {
@@ -240,12 +239,12 @@
 
   &__list-item-link {
     display: inline-block;
+    max-width: 100%;
     padding: 8px 0;
+    overflow: hidden;
+    white-space: nowrap;
     text-decoration: none;
     text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 100%;
 
     &:hover {
       text-decoration: underline;
@@ -266,7 +265,7 @@
       width: 16px;
       height: 12px;
       transform: translateY(-50%);
-      transition: right 0.3s ease;
+      transition: right .3s ease;
       fill: var(--color-purple);
     }
 
@@ -279,16 +278,16 @@
 
   &__term {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
     grid-gap: var(--container-spacing-mobile);
+    grid-template-columns: repeat(1, 1fr);
 
     @media (--viewport-ms-min) {
       grid-template-columns: repeat(2, 1fr);
     }
 
     @media (--viewport-md-min) {
-      grid-template-columns: repeat(3, 1fr);
       grid-gap: var(--container-spacing);
+      grid-template-columns: repeat(3, 1fr);
     }
 
     @media (--viewport-lg-min) {
