--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/modal-article.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/modal-article.css
@@ -5,26 +5,26 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.75);
-  backdrop-filter: blur(3px);
   z-index: 100;
   display: none;
+  width: 100%;
+  height: 100%;
+  background: rgb(255 255 255 / 75%);
+  backdrop-filter: blur(3px);
 
   &__content {
     /* modal content */
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    background: #fff;
-    padding: 30px;
     width: 95%;
     height: 95%;
-    border-radius: 5px;
-    box-shadow: 0px 4px 30px rgba(131, 131, 131, 0.25);
+    padding: 30px;
     overflow: auto;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 4px 30px rgb(131 131 131 / 25%);
+    transform: translate(-50%, -50%);
 
     @media (--viewport-sm-min) {
       width: 70%;
@@ -39,16 +39,16 @@
 
       &__close-button {
         svg {
+          width: 44px;
+          height: 44px;
           margin-top: -15px;
           margin-right: -17px;
           cursor: pointer;
-          width: 44px;
-          height: 44px;
         }
 
         a {
-          cursor: pointer;
           text-decoration: none;
+          cursor: pointer;
         }
       }
     }
