--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/news-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/news-form.css
@@ -54,7 +54,7 @@
         & fieldset {
           margin: 0 0 24px;
           padding: 0 0 24px;
-          border-bottom: 1px solid rgba(61 41 89 / 30%);
+          border-bottom: 1px solid rgb(61 41 89 / 30%);
 
           .form-item:last-child {
             margin-bottom: 0;
