--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
@@ -57,6 +57,7 @@
   &__content {
     position: relative;
     z-index: 2;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
