--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/user-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/user-page.css
@@ -6,7 +6,14 @@
   margin-top: 50px;
 
   &--user-profile-full-picture {
-    margin-top: 25px;
-    text-align: right;
+    text-align: center;
+
+    img {
+      width: 100%;
+      width: -moz-available; /* WebKit-based browsers will ignore this. */
+      width: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+      width: fill-available;
+      height: auto;
+    }
   }
 }
