SIS2-439: redid mobile breadcrumb elipse so it works on server.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/breadcrumb.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/breadcrumb.css
@@ -54,3 +54,21 @@
   }
 }
 
+.is_mobile {
+  display: none;
+}
+
+.is_desktop {
+  display: block;
+}
+
+/* display on mobile screen */
+@media (max-width: 767px) {
+.is_mobile {
+  display: block;
+  }
+
+  .is_desktop {
+    display: none;
+  }
+}
