SIS2-438, SIS2-294, SIS2-294, SIS2-411, SIS2-444

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -104,9 +104,13 @@
             {{ content.field_description }}
           </div>
           <div class="article-page__image">
-            {{ content.field_article_image }}
+		  	{% if content.field_article_image|render is empty %}
+            	{{ content.field_article_image_migrated }}
+			{% else %}
+            	{{ content.field_article_image }}
+			{% endif %}
           </div>
-          {{ content|without(['field_list_date', 'field_header', 'title','field_article_image']) }}
+          {{ content|without(['field_list_date', 'field_header', 'title', 'field_article_image_migrated', 'field_article_image', 'article-page__description']) }}
         </div>
       </div>
       <div class="col-md-4 col-lg-4 col-lg-offset-1 article-content-sidebar">
