--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -110,7 +110,7 @@
             	{{ content.field_article_image }}
 			{% endif %}
           </div>
-          {{ content|without(['field_list_date', 'field_header', 'title', 'field_article_image_migrated', 'field_article_image', 'article-page__description']) }}
+          {{ content|without(['field_list_date', 'field_header', 'title', 'field_article_image_migrated', 'field_article_image', 'field_description']) }}
         </div>
       </div>
       <div class="col-md-4 col-lg-4 col-lg-offset-1 article-content-sidebar">
