SIS2-450 , SIS2-426 , SIS2-318, SIS2-423

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -67,6 +67,18 @@ figure {
   width: 100%;
   margin: 0;
 
+  &.align-left {
+    text-align: left;
+    width: auto;
+  }
+  &.align-right {
+    text-align: right;
+    width: auto;
+  }
+  &.align-center {
+    text-align: center;
+  }
+
   img {
     display: block;
     max-width: 100%;
@@ -77,6 +89,8 @@ figure {
 
   figcaption {
     margin-top: 8px;
+    font-size: 0.8em;
+    color: gray;
   }
 }
 
