--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/video.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/video.css
@@ -30,6 +30,10 @@
     content: "";
   }
 
+  .contextual-region {
+    position: unset;
+  }
+
   picture,
   img {
     display: block;
@@ -65,6 +69,7 @@
   }
 
   &__play-icon {
+    display: none !important; /* DOUBLE PLAY BUTTON */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -94,7 +99,8 @@
   }
 
   &__content {
-    display: none;
+   display: none;
+   display: none !important; /* DOUBLE PLAY BUTTON */
 
     @media (--viewport-sm-min) {
       position: absolute;
