--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
@@ -42,6 +42,9 @@
       background-color: rgb(0 0 0 / 30%);
       content: "";
     }
+    .contextual-region {
+      position: unset;
+    }
   }
 
   iframe,
